--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
     </style>
+    <script src="https://unpkg.com/@stackblitz/sdk/bundles/sdk.umd.js"></script>
 </head>
 <body>
     <div id="myDiv"></div>
-    <script type="module" src="./main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
