--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <iframe 
-        src="https://stackblitz.com/edit/js-8qwkfg?embed=1&file=index.js" 
+        src="https://stackblitz.com/edit/web-platform-3tsdku?embed=1&file=index.html" 
         frameborder="0">
     </iframe>
 </body>
