--- a/index.html
+++ b/index.html
@@ -5,18 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StackBlitz Demo</title>
     <style>
-        body { margin: 0; }
-        iframe {
-            width: 100vw;
-            height: 100vh;
+        body { 
+            margin: 0; 
+            padding: 20px;
+            font-family: Arial, sans-serif;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+        }
+        .editor {
+            width: 100%;
+            height: 80vh;
             border: none;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
         }
     </style>
 </head>
 <body>
-    <iframe 
-        src="https://stackblitz.com/edit/web-platform-3tsdku?embed=1&file=index.html" 
-        frameborder="0">
-    </iframe>
+    <div class="container">
+        <h1>StackBlitz Demo</h1>
+        <iframe 
+            class="editor"
+            src="https://stackblitz.com/edit/js-vanilla-web?embed=1&file=index.html" 
+            title="StackBlitz Editor">
+        </iframe>
+    </div>
 </body>
 </html>
